Allow AiQuery to execute without needing input. Add Packet Logger task for debugging help. Fix not able to update name, description of workflows. Prefer StringUtils.is(not)Blank over null checks.